[package]
name = "hilbert-geometry"
version = "0.1.5"
edition = "2024"
description = "Hilbert-encoded geometries. Currently only supports lon/lat coordinates."
license = "MIT"
repository = "https://github.com/alamminsalo/hilbert-geometry"

[dependencies]
bincode = "2.0.1"
fast_hilbert = "2.0.1"
geo-types = "0.7.16"

[dev-dependencies]
wkb = "0.9.0"
